picture: fix pic path

--- a/lab10/lab10_11811407.md
+++ b/lab10/lab10_11811407.md
@@ -179,13 +179,13 @@ It corrupts.
 
 In this task I use command ``openssl s_client -connect www.baidu.com:443 -showcerts`` to get the certs from www.baidu.com
 
-![6_1](C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab10\pictures\6_1.png)
+![6_1](./pictures/6_1.png)
 
 ### Step2
 
 ``openssl x509 -in c1.pem -text -noout`` we got this
 
-![6_2](C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab10\pictures\6_2.png)
+![6_2](./pictures/6_2.png)
 
 ### Step3 
 
@@ -195,7 +195,7 @@ In this task I use command ``openssl s_client -connect www.baidu.com:443 -showce
 
 I got the signature like this
 
-<img src="C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab10\pictures\6_3.png" alt="6_3" style="zoom:80%;" />
+<img src="./pictures/6_3.png" alt="6_3" style="zoom:80%;" />
 
 ### Step4
 
@@ -205,7 +205,7 @@ I got the signature like this
 
 I got this hash:
 
-<img src="C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab10\pictures\6_4.png" alt="6_4" style="zoom:80%;" />
+<img src="./pictures/6_4.png" alt="6_4" style="zoom:80%;" />
 
 Then we write codes like this, the basic idea is to use the public key of in the ``c1.pem``.
 
@@ -225,7 +225,7 @@ print_BN("M = ", M);
 
 Then we got this:
 
-![image-20201124115243185](C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab10\pictures\image-20201124115243185.png)
+![image-20201124115243185](./pictures/image-20201124115243185.png)
 
 The last 64 bytes is just the same as the hash value, which verifies that it is valid.
 
