--- a/lab11/lab11_11811407.md
+++ b/lab11/lab11_11811407.md
@@ -8,17 +8,17 @@
 
 I add it here
 
-<img src="C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab11\pictures\image-20201206142513231.png" alt="image-20201206142513231" style="zoom:80%;" />
+<img src="./pictures/image-20201206142513231.png" alt="image-20201206142513231" style="zoom:80%;" />
 
 Then I use Boby's account to see this:
 
-<img src="C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab11\pictures\image-20201206142852758.png" alt="image-20201206142852758" style="zoom:50%;" />
+<img src="./pictures/image-20201206142852758.png" alt="image-20201206142852758" style="zoom:50%;" />
 
 ## Task2
 
 I also add it into the brief description, and using Boby's account to see this
 
-<img src="C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab11\pictures\image-20201206142934924.png" alt="image-20201206142934924" style="zoom:50%;" />
+<img src="./pictures/image-20201206142934924.png" alt="image-20201206142934924" style="zoom:50%;" />
 
 ## Task3
 
@@ -28,13 +28,13 @@ Then I use Boby's account to see the Samy's profile.
 
 Here I steal the cookie:
 
-<img src="C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab11\pictures\image-20201206143448693.png" alt="image-20201206143448693" style="zoom:67%;" />
+<img src="./pictures/image-20201206143448693.png" alt="image-20201206143448693" style="zoom:67%;" />
 
 ## Task4
 
 First launch an attempt to add Samy as a friend to see the Samy's id is `47`.
 
-![image-20201206144443413](C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab11\pictures\image-20201206144443413.png)
+![image-20201206144443413](./pictures/image-20201206144443413.png)
 
 url = `http://www.xsslabelgg.com/action/friends/add?friend=47&__elgg_ts=1607265858&__elgg_token=uYYKAnlB7lUs2nCWFEd_pQ&__elgg_ts=1607265858&__elgg_token=uYYKAnlB7lUs2nCWFEd_pQ`, contains `ts` and `token`.
 
@@ -58,17 +58,17 @@ window.onload = function () {
 </script>
 ```
 
-<img src="C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab11\pictures\image-20201206145353441.png" alt="image-20201206145353441" style="zoom:67%;" />
+<img src="./pictures/image-20201206145353441.png" alt="image-20201206145353441" style="zoom:67%;" />
 
 Then I use Boby's account to see Samy's profile, then they automatically became friends.
 
-<img src="C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab11\pictures\image-20201206145450707.png" alt="image-20201206145450707" style="zoom:80%;" />
+<img src="./pictures/image-20201206145450707.png" alt="image-20201206145450707" style="zoom:80%;" />
 
 
 
 
 
-<img src="C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab11\pictures\image-20201206145507579.png" alt="image-20201206145507579" style="zoom:67%;" />
+<img src="./pictures/image-20201206145507579.png" alt="image-20201206145507579" style="zoom:67%;" />
 
 ### Question1
 
@@ -84,11 +84,11 @@ It doesn't work, it becomes inner text and cannot be executed.
 
 First launching a editing action and using Wireshark to capture it, I found that the request URL is http://www.xsslabelgg.com/action/profile/edit.
 
-<img src="C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab11\pictures\image-20201206153828508.png" alt="image-20201206153828508" style="zoom:80%;" />
+<img src="./pictures/image-20201206153828508.png" alt="image-20201206153828508" style="zoom:80%;" />
 
 and the post body is in the following picture.
 
-<img src="C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab11\pictures\image-20201206153215184.png" alt="image-20201206153215184" style="zoom:67%;" />
+<img src="./pictures/image-20201206153215184.png" alt="image-20201206153215184" style="zoom:67%;" />
 
 Here is the post body.
 
@@ -126,7 +126,7 @@ window.onload = function(){
 
 After editing Samy's profile, using Boby's account to see the Samy's profile. Then go back to Boby's profile, it succeeds.
 
-<img src="C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab11\pictures\image-20201206154202421.png" alt="image-20201206154202421" style="zoom:80%;" />
+<img src="./pictures/image-20201206154202421.png" alt="image-20201206154202421" style="zoom:80%;" />
 
 ### Question3
 
@@ -134,7 +134,7 @@ In avoidance of changing the Samy's (the attacker's) profile himself.
 
 After removing this sentence, I find this:
 
-<img src="C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab11\pictures\image-20201206155009999.png" alt="image-20201206155009999" style="zoom:67%;" />
+<img src="./pictures/image-20201206155009999.png" alt="image-20201206155009999" style="zoom:67%;" />
 
 ## Task6
 
@@ -180,27 +180,27 @@ window.onload = function(){
 
 After I add it into Samy's `about me`, then I post the request, and return to the home page, and I get this message.
 
-<img src="C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab11\pictures\image-20201206163826570.png" alt="image-20201206163826570" style="zoom:67%;" />
+<img src="./pictures/image-20201206163826570.png" alt="image-20201206163826570" style="zoom:67%;" />
 
 Then I use Boby's account to visit the Samy's profile and see this.
 
-<img src="C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab11\pictures\image-20201206163850304.png" alt="image-20201206163850304" style="zoom:67%;" />
+<img src="./pictures/image-20201206163850304.png" alt="image-20201206163850304" style="zoom:67%;" />
 
 And friend added successfully:
 
-<img src="C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab11\pictures\image-20201206174755893.png" alt="image-20201206174755893" style="zoom:67%;" />
+<img src="./pictures/image-20201206174755893.png" alt="image-20201206174755893" style="zoom:67%;" />
 
 Then I use Boby's account to see the profile himself, and see this.
 
-![image-20201206163915844](C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab11\pictures\image-20201206163915844.png)
+![image-20201206163915844](./pictures/image-20201206163915844.png)
 
 Then I use the Alice's account to see the Boby's profile, and see this.
 
-<img src="C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab11\pictures\image-20201206163940406.png" alt="image-20201206163940406" style="zoom:67%;" />
+<img src="./pictures/image-20201206163940406.png" alt="image-20201206163940406" style="zoom:67%;" />
 
 And simultaneously adding friend successfully. 
 
-![image-20201206174912647](C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab11\pictures\image-20201206174912647.png)
+![image-20201206174912647](./pictures/image-20201206174912647.png)
 
 ## Task7
 
@@ -208,19 +208,19 @@ And simultaneously adding friend successfully.
 
 After activating the `HTMLawed`, visiting Samy's profile using Alice's account, then I see this, the `script` tag disappears.
 
-![image-20201207131009486](C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab11\pictures\image-20201207131009486.png)
+![image-20201207131009486](./pictures/image-20201207131009486.png)
 
 The script doesn't work, and the tag `script` is gone.
 
 ### 2
 
-<img src="C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab11\pictures\image-20201207132107859.png" alt="image-20201207132107859" style="zoom:80%;" />
+<img src="./pictures/image-20201207132107859.png" alt="image-20201207132107859" style="zoom:80%;" />
 
 After activating both countermeasures, it shows like this above. The script doesn't work, and the tag `script` is gone.
 
 And after re-save the profile, it shows like this:
 
-<img src="C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab11\pictures\image-20201207132429072.png" alt="image-20201207132429072" style="zoom:67%;" />
+<img src="./pictures/image-20201207132429072.png" alt="image-20201207132429072" style="zoom:67%;" />
 
 
 
