--- a/lab12/lab12_11811407.md
+++ b/lab12/lab12_11811407.md
@@ -10,7 +10,7 @@
 
 ## Task1
 
-![1](.\img\1.png)
+![1](./img/1.png)
 
 I found the the addresses of libc functions are as following, which are shown in the picture.
 
@@ -52,7 +52,7 @@ int main(int argc, char **argv)
 }
 ```
 
-![2](.\img\1.png)
+![2](./img/1.png)
 
  I print out the address of the shell command in the `main()`, and it shows that the address of `/bin/sh` is `0xbffffddc`.
 
