--- a/lab8/lab8_11811407.md
+++ b/lab8/lab8_11811407.md
@@ -8,7 +8,7 @@
 
 - user name and password
 
-  ![img](C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab8\pictures\88526E6BA035DE5C59095AF25195329C.png)
+  ![img](./pictures/88526E6BA035DE5C59095AF25195329C.png)
 
   `username = admin`, `password=seedelgg`.
 
@@ -16,7 +16,7 @@
 
   Here shows that I browse the `URL=https://www.heartbleedlabelgg.com/admin`
 
-  ![img](C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab8\pictures\2994EF772EBD2E2E3C3AE4B7A6056AC5-1604930685585.png)
+  ![img](./pictures/2994EF772EBD2E2E3C3AE4B7A6056AC5-1604930685585.png)
 
   Here shows that 
 
@@ -24,7 +24,7 @@
 
   Here the terminal shows that I send a `subject=hello`, and `body=hello world`.
 
-  ![img](C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab8\pictures\185CD255A168EADCE26CC120763EF043.png)
+  ![img](./pictures/185CD255A168EADCE26CC120763EF043.png)
 
 ## Task2
 
@@ -32,15 +32,15 @@
 
 Here is length of `0x15b`.
 
-![1](C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab8\pictures\1.png)
+![1](./pictures/1.png)
 
 Here is length of `0x50`.
 
-![img](C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab8\pictures\032050D21158DBD2BE3BFE5B5D32DA4A.png)
+![img](./pictures/032050D21158DBD2BE3BFE5B5D32DA4A.png)
 
 Here is length of `0x17`.
 
-![img](C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab8\pictures\A35D44E693022A74EE8B04D0F896E679.png)
+![img](./pictures/A35D44E693022A74EE8B04D0F896E679.png)
 
 
 
@@ -50,7 +50,7 @@ From the pictures above we see that as the length variable decreases, the respon
 
 The boundary length is `0x16`.
 
-![img](C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab8\pictures\6AE042C559B762DBE7D1C9959668F121.png)
+![img](./pictures/6AE042C559B762DBE7D1C9959668F121.png)
 
 
 
@@ -60,7 +60,7 @@ The boundary length is `0x16`.
 
 It doesn't work.
 
-![img](C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab8\pictures\261DC7E482210CA93309589A00CE6B25.png)
+![img](./pictures/261DC7E482210CA93309589A00CE6B25.png)
 
 ### 3.2
 
