--- a/lab9/lab9_11811407.md
+++ b/lab9/lab9_11811407.md
@@ -8,11 +8,11 @@
 
 I follow the instructions in the lab step by step, and finally I have modified the file `zzz`.
 
-![1](C:\\Users\\Lori\\Desktop\\1.png)
+![1](./1.png)
 
 When running the `attack_cow.c`:
 
-![2](C:\Users\Lori\Desktop\5.png)
+![2](./5.png)
 
 Then we can observe that the file `zzz` has been modified in the first screenshot.
 
@@ -57,7 +57,7 @@ sudo adduser charlie
 
 In the following screenshot we can see that the UID is `1001`.
 
-![2](C:\Users\Lori\desktop\2.png)
+![2](./2.png)
 
 ### Then to modify the cow_attack.c
 
@@ -69,13 +69,13 @@ The second is to find `charlie:x:1001` in the function `strstr()`.
 
 The third is to modify the UID to `0000`.
 
-![4](C:\Users\lori\Desktop\6.png)
+![4](./6.png)
 
 ### Hack success
 
 In the following picture we can see that `charlie` has `root` privileges.
 
-![2](C:\Users\Lori\Desktop\Course\ComputerScience\CS315\lab9\pictures\2.png)
+![2](./2.png)
 
 ## Interesting observations
 
