picture: fix pic path

--- a/lab4/11811407_lab4.md
+++ b/lab4/11811407_lab4.md
@@ -10,11 +10,11 @@
 
 IP address of victim. 
 
-<img src="C:\Users\Lori\AppData\Roaming\Typora\typora-user-images\image-20201012193346503.png" alt="image-20201012193346503" style="zoom:67%;" />
+<img src="./pictures/image-20201012193346503.png" alt="image-20201012193346503" style="zoom:67%;" />
 
 `nmap -T4 192.168.150.130`
 
-<img src="C:\Users\Lori\AppData\Roaming\Typora\typora-user-images\image-20201012193530863.png" alt="image-20201012193530863" style="zoom:67%;" />
+<img src="./pictures/image-20201012193530863.png" alt="image-20201012193530863" style="zoom:67%;" />
 
 ### 2
 
@@ -22,7 +22,7 @@ IP address of victim.
 
 using the command `nmap -T4 -O 192.168.150.130`
 
-<img src="C:\Users\Lori\AppData\Roaming\Typora\typora-user-images\image-20201012193707262.png" alt="image-20201012193707262" style="zoom:67%;" />
+<img src="./pictures/image-20201012193707262.png" alt="image-20201012193707262" style="zoom:67%;" />
 
 From the picture we see that
 
@@ -62,11 +62,11 @@ Using `-T0` or `-T1`.
 
 #### Attacks using metasploit framework
 
-<img src="C:\Users\Lori\AppData\Roaming\Typora\typora-user-images\image-20201012200909304.png" alt="image-20201012200909304" style="zoom:67%;" />
+<img src="./pictures/image-20201012200909304.png" alt="image-20201012200909304" style="zoom:67%;" />
 
 #### Using Vsftpd v2.3.4 backdoor to attack
 
-<img src="C:\Users\Lori\AppData\Roaming\Typora\typora-user-images\image-20201012203809280.png" alt="image-20201012203809280" style="zoom:67%;" />
+<img src="./pictures/image-20201012203809280.png" alt="image-20201012203809280" style="zoom:67%;" />
 
 
 
