--- a/lab5/lab5_11811407.md
+++ b/lab5/lab5_11811407.md
@@ -2,7 +2,7 @@
 
 **Name**: 黎诗龙
 
-**SID: **11811407
+**SID:**11811407
 
 ## 2
 
@@ -14,7 +14,7 @@ smali method:
 
 ![image-20201025200843283](./pictures/image-20201025200843283.png)
 
-I add `invoke-static {v1, v3},Landroid/util/Log;->d(Ljava/lang/String;Ljava/lang;Ljava/lang/String;)I` into it.
+I add `invoke-static {v1, v3},Landroid/util/Log;->d(Ljava/lang/String;Ljava/lang/String;)I` into it.
 
 `invoke-static` is the method of `Log.d(xxx,xxx)` in smali.
 
